[tool.poetry]
name = "bot-stepik"
version = "0.1.0"
description = ""
authors = ["emptyTuple <kotorov@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
aiogram = "^3.13.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
